# ChangeLog for app-text/acroread
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.56 2005/06/29 10:38:37 blubb Exp $

  29 Jun 2005; Simon Stelling <blubb@gentoo.org> acroread-7.0.0.2-r2.ebuild:
  stable on amd64

  29 Jun 2005; Stefan Schweizer <genstef@gentoo.org> -acroread-7.0.ebuild,
  -acroread-7.0.0.2.ebuild, -acroread-7.0.0.2-r1.ebuild,
  acroread-7.0.0.2-r2.ebuild:
  7.0.0.2-r2 x86 stable thanks to Kamil Gornik <gentoo@julek.pl>, Kim Pedersen
  <misc@czuba.dk> and Nikhil Sethi <nikhil.sethi@gmail.com> in bug 89008,
  remove old ebuilds.

*acroread-7.0.0.2-r2 (11 Jun 2005)

  11 Jun 2005; MATSUU Takuto <matsuu@gentoo.org>
  +acroread-7.0.0.2-r2.ebuild:
  Added linguas_{ja,ko,zh_CN,zh_TW}.
  Removed PDEPEND="media-fonts/acroread-asianfonts".

  10 Jun 2005; Stefan Schweizer <genstef@gentoo.org>
  acroread-7.0.0.2-r1.ebuild:
  Move the noplugin to the mozilla useflag, thanks to Alessio D'Ascanio
  <otaku@fastwebnet.it> in bug 94651

*acroread-7.0.0.2-r1 (18 May 2005)

  18 May 2005; Stefan Schweizer <genstef@gentoo.org>
  +files/acroread-scim.patch, +acroread-7.0.0.2-r1.ebuild:
  Adding german and english versions thanks to tuXXer <bs.net@gmx.de>, Jakub
  Moc <jakub.moc@seznam.cz>, Heinrich Wendel <lanius@gentoo.org> and Rafael
  Kolless <rafael@mondoria.de> in bug 92699. Fix startup bug with scim thanks
  to Clement Siuchung Cheung <sccheung@umich.edu> and Ulrich Plate
  <plate@gentoo.org> in bug 89766

*acroread-7.0.0.2 (14 May 2005)

  14 May 2005; Stefan Schweizer <genstef@gentoo.org>
  +acroread-7.0.0.2.ebuild:
  New version thanks to Martin Adler <martin.adler@gmx.net> in bug 88956

  28 Mar 2005; Mamoru KOMACHI <usata@gentoo.org> acroread-5.10.ebuild,
  acroread-7.0.ebuild:
  Added cjk USE flag back; bug #85343.

  25 Mar 2005; Danny van Dyk <kugelfang@gentoo.org> acroread-5.10.ebuild,
  acroread-7.0.ebuild: