@@ -1,7 +1,7 @@
-MD5 dd0e0997db8cd7aa9bd9a8d2b7d50e27 ChangeLog 10096
+MD5 6c79576d10bf02070be5537a7bd1accc acroread-7.0.0.2-r2.ebuild 2734
 MD5 5b5f9119fe3b2a9644cd0730e9ed9ded acroread-5.10.ebuild 2488
+MD5 903159b740f1ea52349f2539fb1ba1f9 ChangeLog 10334
 MD5 26b4b081d538c195dc39bcb2ec8e6f3a metadata.xml 161
-MD5 82deccb7fa8fbfc9053951453965261d acroread-7.0.0.2-r2.ebuild 2711
+MD5 26bef9104ff02da783b459c37981f406 files/digest-acroread-7.0.0.2-r2 553
 MD5 d0981fc5a58874b78a6f2a2b73d3e43d files/digest-acroread-5.10 63
 MD5 00414d6be2296740cc5225ca93a3d035 files/acroread-scim.patch 488
-MD5 26bef9104ff02da783b459c37981f406 files/digest-acroread-7.0.0.2-r2 553
