@@ -1,6 +1,11 @@
 # ChangeLog for app-text/acroread
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.56 2005/06/29 10:38:37 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.57 2005/07/24 12:52:12 genstef Exp $
+
+  24 Jul 2005; Stefan Schweizer <genstef@gentoo.org>
+  acroread-7.0.0.2-r2.ebuild:
+  Depend on gtk+-2.0 as per bug 98889 thanks to Boris <borisdusek@cmail.cz>,
+  arne anka <arne.anka@ginguppin.de> and Luis Medinas <lmedinas@gmail.com>
 
   29 Jun 2005; Simon Stelling <blubb@gentoo.org> acroread-7.0.0.2-r2.ebuild:
   stable on amd64
